# AI_Naicha

./: .env.example  .gitignore  README.md  _log.txt  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/history/: history-view.tsx  page.tsx
app/skill-library/: page.tsx  skill-library-view.tsx
app/store-config/: page.tsx
beverage_ai/: __init__.py  cli.py
beverage_ai/api/: __init__.py  jobs.py  main.py  translator.py
beverage_ai/aspects/: __init__.py  cache.py  customization.py  extractor.py  pipeline.py  schema.py
beverage_ai/constraints/: __init__.py  checker.py
beverage_ai/feedback/: __init__.py  recorder.py
beverage_ai/ingredients/: __init__.py  aliases.py  vocab.py
beverage_ai/optimizer/: __init__.py  acquisition.py  mmr.py  nsga2.py  problem.py
beverage_ai/pipeline/: __init__.py  end_to_end.py
beverage_ai/planner/: __init__.py  llm_planner.py
beverage_ai/priors/: __init__.py  dirichlet.py  engine.py
beverage_ai/recipes/: __init__.py  generator.py  reconciler.py  schema.py
beverage_ai/scrapers/: __init__.py  base.py  runner.py  store.py
beverage_ai/simulators/: __init__.py
beverage_ai/utils/: logging.py
components/: recipe-card.tsx
components/ui/: button.tsx  card.tsx  textarea.tsx
data/feedback/: demo_group_map.yaml  panel_analysis_s_demo_w1.json  panel_analysis_s_demo_w1.md
data/ingredients/: aliases.yaml  ingredient_vocab.yaml  keyword_aliases.yaml  topping_compatibility.yaml
data/panels/: panel_design_diagnostics_smoke_test.json  panel_schedule_smoke_test.csv  panel_schedule_smoke_test.md
data/priors/: context_deltas.yaml  dirichlet_alpha_v1.yaml  dirichlet_alpha_v2.yaml
data/products/: README.md  sku_features_v1.yaml
data/recipes/: reference_recipes_v1.yaml
data/reviews/: hf_dataset_survey.json
demo/: app.py
demo/examples/: recipe_example.yaml
docs/: AUTODL_SETUP.md  PATH_A_RECIPE.md  SCRAPING_NOTICE.md  技术文档.md  茶饮研发闭环AI系统_v1实现方案.md  茶饮研发闭环AI系统_技术方案书.md
lib/: ai-client.ts  api.ts  parse-ai-json.ts  store-config.ts
models/: sales_v1_log.json  sensory_gnn_stage1_log.json  sensory_gnn_stage2_log.json
scripts/: _autodl_remote.py  analyze_panel.py  audit_aspects.py  build_path_a_dataset.py  collect_manual.py  discover_hf_datasets.py  download_from_autodl.sh  fit_dirichlet_priors.py  generate_synthetic_panel.py  generate_synthetic_skus.py  hf_recipe.yaml  ingest_hf_reviews.py  ingest_llm_synthetic.py  ingest_partner.py  ingest_reviews.py  ingest_weibo.py  inspect_data.py  inspect_hf_data.py  panel_design.py  report_training.py  run_training_autodl.sh  setup_autodl.sh  train_sales_model.py  train_sensory_gnn_stage1.py  train_sensory_gnn_stage2.py  update_from_feedback.py  upload_to_autodl.sh  validate_recipes.py
skills/bad_recipe_skill_library/: README.md  cost_cap.json  cost_cap.md  make_time.json  make_time.md  price_band.json  price_band.md  season.json  season.md  sweetness.json  sweetness.md  target_audience.json  target_audience.md  temperature.json  temperature.md
skills/recipe_skill_library/: README.md  cost_cap.json  cost_cap.md  make_time.json  make_time.md  price_band.json  price_band.md  season.json  season.md  sweetness.json  sweetness.md  target_audience.json  target_audience.md  temperature.json  temperature.md
tests/: conftest.py
tests/integration/: test_api_v2.py  test_api_v2_feedback_update.py  test_feedback_loop.py  test_ingest_pipeline.py  test_pipeline.py
tests/unit/: test_acquisition_mmr.py  test_api_cors.py  test_api_translator.py  test_aspect_cache.py  (+18 more)
types/: drink.ts
(+25 files in other folders)
